<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp" 
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        
        <ImageView
        android:id="@+id/inventoryImage"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >
       

        <TextView
            android:id="@+id/vT_ai_productname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/product_name" />
         <TextView
            android:id="@+id/vT_ai_manufactname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manufact_name" />
          <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >
          <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red_textcolor"
            android:text="@string/stock_qty" />
          <TextView
            android:id="@+id/vT_ai_quant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red_textcolor"
            android:text="1500" />
          <TextView
              android:id="@+id/vT_ai_measurement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red_textcolor"
            android:text="@string/pieces" />
          </LinearLayout>
	 </LinearLayout>
    </LinearLayout>

   

</LinearLayout>
