<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@raw/login_bg"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/vI_userlogin_loginImage"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@raw/vs_logo_login"
        android:contentDescription="@string/app_name" />

    <LinearLayout
        android:id="@+id/vI_userlogin_emaillayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vI_userlogin_loginImage"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/vE_userlogin_emial"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@raw/text_bg"
            android:drawableLeft="@raw/user_mail_id"
            android:drawablePadding="20dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vI_userlogin_passwordlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vI_userlogin_emaillayout"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <EditText
             android:id="@+id/vE_userlogin_password"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@raw/text_bg"
            android:drawableLeft="@raw/user_key"
            android:drawablePadding="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:baselineAligned="false"
        android:id="@+id/vL_userlogin_forgot_layout"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/vI_userlogin_passwordlayout"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/vL_userlogin_forgotpassword"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|left"
            android:layout_gravity="center|left"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
             android:id="@+id/vL_userlogin_login"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:gravity="center|left"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vL_userlogin_forgot_layout"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/create_account"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/vL_userlogin_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/sign_up"
                android:textAllCaps="true"
                android:textColor="@color/yellow"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>